Improved the styling

--- a/event-technical.html
+++ b/event-technical.html
@@ -48,26 +48,31 @@
             <div class="popup-content">
                 <img src="Images/comingsoon.jpg" alt="Popup Image" class="popup-img" id="popup-img">
                 <div class="popup-text">
-                    <h3 id="popup-title">Popup Title</h3>
+                    <h2 id="popup-title">Popup Title</h3>
                     <p class="popDesc">Description</p>
                     <p id="popup-description">Description will be displayed here.</p>
-                    <p><strong>Team:</strong></p>
+                    <p class="popTeam">Team</p>
                     <p><span id="popup-team">Team Name</span></p>
-                    <p><strong>Fees:</strong></p>
+                    <p class="popFees">Fees</p>
                     <p><span id="popup-fees">Event Fees</span></p></p>
                     <div>
-                        <strong>Prizes:</strong>
+                        <p class="popPrizes">Prizes</p>
                         <ul id="popup-prizes">
                         </ul>
                     </div>
+                    <br>
                     <div>
-                        <strong>Rules & Regulations:</strong>
+                        <p class="popRules">Rules & Regulations:</p>
                         <ul id="popup-rules">
-                        </ul>
+                        </ul><br>
                     </div>
-                    <p><strong>Location:</strong> <span id="popup-location">Event Location</span></p>
-                    <p><strong>Date:</strong> <span id="popup-date">Event Date</span></p>
-                    <p><strong>Contact:</strong> <span id="popup-contact">Contact Information</span></p>
+                    <p class="popLoc">Location:</p>
+                    <p id="popup-location">Event Location</p>
+                    <p class="popDate">Date:</p>
+                    <p id="popup-date">Event Date</p>
+                    <p class="popContact">Contact:</p>
+                    <p id="popup-contact">Contact Info</p>
+                    <button class="Register-btn" type="submit">Register</button>
                 </div>
             </div>
         </div>
