Added Contact Details

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <div class="img-bx"></div>
             <div class="text">
                 <p class="short-text">Vipumi K Swu</p>
-                <p class="short-text">General Head</p>
+                <p class="short-text">Convenor</p>
                 <a class="long-text">6009825815<br>
                     vipumiswu@gmail.com</a>
                 <!-- <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="linkedin-icon">
@@ -99,6 +99,106 @@
                 <p class="short-text">Cultural Head</p>
                 <a class="long-text">9856345627<br>
                     yepthomiyeshelo@gmail.com</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Nochira Jameer</p>
+                <p class="short-text">Finance</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Raja Ahmed</p>
+                <p class="short-text">Finance</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Vitozo Pusa</p>
+                <p class="short-text">Sports Head</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Yandava Rishi</p>
+                <p class="short-text">Sports Head</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Noseno Vitsu</p>
+                <p class="short-text">Hospitality</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Lopinti Hari</p>
+                <p class="short-text">Hospitality</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Himugha Zhimo</p>
+                <p class="short-text">Publicity</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Meenakshi Varsha</p>
+                <p class="short-text">Publicity</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Puchong</p>
+                <p class="short-text">Design Head</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img-bx"></div>
+            <div class="text">
+                <p class="short-text">Zayie Vitso</p>
+                <p class="short-text">Design Head</p>
+                <!-- <a class="long-text">9856345627<br>
+                    yepthomiyeshelo@gmail.com</a> -->
             </div>
         </div>
     </div>
