Updated the dates of the events

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <span class="icon">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Will be updated soon</p>
+                    <p>6-8 March. For details, check out the individual events</p>
                 </div>
             </div>
             <div class="faq">
