Edited FAQs and aftermovie section

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             <h2>Aftermovies</h2>
             <div class="buttons">
                 <button onclick="loadVideo('https://www.youtube.com/embed/T0Hf_Q9SAG8')">2023</button>
-                <button onclick="loadVideo('https://www.youtube.com/embed/T0Hf_Q9SA8')">2020</button>
-                <button onclick="loadVideo('https://www.youtube.com/embed/T0Hf_Q9SAG8')">2019</button>
+                <button onclick="loadVideo('https://www.youtube.com/embed/S3skvtm7HfI?si=ui67IrPdNQHTLl1Y')">2020</button>
+                <button onclick="loadVideo('https://www.youtube.com/embed/tiSUU2s1ASo')">2019</button>
             </div>
             <div class="video-container" id="video-container">
                 <iframe id="video-frame" src="https://www.youtube.com/embed/T0Hf_Q9SAG8" allowfullscreen></iframe>
