--- a/event-technical.html
+++ b/event-technical.html
@@ -72,7 +72,7 @@
                     <p id="popup-date">Event Date</p>
                     <p class="popContact">Contact:</p>
                     <p id="popup-contact">Contact Info</p>
-                    <button class="Register-btn" type="submit">Register</button>
+                    <button class="Register-btn" id="Register-btn">Register</button>
                 </div>
             </div>
         </div>
