Added card images of the events

--- a/event.html
+++ b/event.html
@@ -43,21 +43,21 @@
         <div class="card">
             <h2 class="card-title">Tech Events</h2>
             <div class="image-container">
-                <img src="Images/comingsoon.jpg" alt="Sample Image">
+                <img src="Images/TechnicalCard.jpg" alt="Sample Image">
             </div>
             <button class="view-more-btn technical-btn">Explore</button>
         </div>
         <div class="card">
             <h2 class="card-title">Cultural Events</h2>
             <div class="image-container">
-                <img src="Images/comingsoon.jpg" alt="Sample Image">
+                <img src="Images/CulturalPic.jpg" alt="Sample Image">
             </div>
             <button class="view-more-btn cultural-btn">Explore</button>
         </div>
         <div class="card">
             <h2 class="card-title">Sports Events</h2>
             <div class="image-container">
-                <img src="Images/comingsoon.jpg" alt="Sample Image">
+                <img src="Images/CulturalPic.jpg" alt="Sample Image">
             </div>
             <button class="view-more-btn sports-btn">Explore</button>
         </div>
