--- a/event-technical.html
+++ b/event-technical.html
@@ -116,7 +116,7 @@
                     </li>
                     <li>
                         <span><i class="far fa-envelope"></i></span>
-                        <a>techavinya3@gmail.com</a>
+                        <a>ekarikthinofficial@gmail.com</a>
                     </li>
                     <li>
                         <span><i class="fas fa-phone-volume"></i></span>
