Added note and rules

--- a/event-technical.html
+++ b/event-technical.html
@@ -72,6 +72,8 @@
                     <p id="popup-date">Event Date</p>
                     <p class="popContact">Contact:</p>
                     <p id="popup-contact">Contact Info</p>
+                    <p class="Note-pop">Note</p>
+                    <p>Further info will be passed in the whatsapp groups.</p>
                     <button class="Register-btn" id="Register-btn">Register</button>
                 </div>
             </div>
