Added the details

--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="card">
-            <div class="img-bx"></div>
+            <div class="img-bx raja-img"></div>
             <div class="text">
                 <p class="short-text">Raja Ahmed</p>
                 <p class="short-text">Finance</p>
@@ -123,7 +123,7 @@
         </div>
 
         <div class="card">
-            <div class="img-bx"></div>
+            <div class="img-bx vitosu-img"></div>
             <div class="text">
                 <p class="short-text">Vitozo Pusa</p>
                 <p class="short-text">Sports Head</p>
