Removed the name footer

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         </div>
  
         <div class="card">
-            <div class="img-bx"></div>
+            <div class="img-bx surya-box"></div>
             <div class="text">
                 <p class="short-text">P Surya Kamaraju Babu</p>
                 <p class="short-text">Cultural Head</p>
@@ -266,9 +266,7 @@
             </div>
         </div>
     </footer>
-    <div class="developedby">
-        <p>Website Designed by <a href="https://linkedin.com/in/prince-raj-209b40280">@PrinceRaj</a> </p>
-    </div>
+    
     <script src="contactScript.js"></script>
 </body>
 </html>
