--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         </div>
  
         <div class="card">
-            <div class="img-bx"></div>
+            <div class="img-bx yeselo-img"></div>
             <div class="text">
                 <p class="short-text">Yeshelo Yeptho</p>
                 <p class="short-text">Cultural Head</p>
