Added Event Date

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <h1><span class="ekevee">Ekarikthin </span><span class="cross-sym"> X </span><span class="tech-eve">Tech Avinya</span></h1>
         <p>Experience the most thrilling college fest ever!</p>
+        <p class="event-date">6-8 March,2025</p>
         <a href="event.html" class="btn">Explore</a>
     </div>
     
